# hanasakuya-app

./: .gitignore  README.md  forge.config.ts  index.html  package-lock.json  package.json  vite.renderer.config.ts
.github/workflows/: release.yml
docs/: architecture.md  dev-setup.md  release.md
native-core/: Cargo.toml
native-core/src/: camera.rs  inference.rs  main.rs  pipeline.rs  postprocess.rs  shared_memory_bridge.rs  video_pipeline.rs
resources/: app-update.yml
src/: index.css  main.ts  preload.ts  renderer.tsx
src/main/: coreProcess.ts
src/renderer/: App.tsx
src/renderer/components/: DetectionOverlay.tsx  SettingsModal.tsx  StatsBar.tsx
src/renderer/hooks/: useNativeCore.ts
src/renderer/pages/: DetectionScreen.tsx
