[package]
name = "oocyte-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

# Image processing / Camera
opencv = { version = "0.93", default-features = false, features = ["videoio", "imgproc", "highgui", "imgcodecs"] }
base64 = "0.22"

# Serialization (stdio JSON protocol)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared memory
shared_memory = "0.12"

# Concurrency
crossbeam-channel = "0.5"

# ndarray for tensor operations
ndarray = "0.17"
